--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contact-list-react-api",
   "homepage": "https://diegodzm.github.io/contactlist-reactfetchapi",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
